css/leon.css
/* Start Variables */
:root {
  --main-color: #10cab7;
  --secondary-color: #2c4755;
  --section-padding: 60px;
  --section-background: #f6f6f6;  
  --main-duration: 0.5s;
}
/* End Variables */
/* Start Global Rules */
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
  list-style: 1.15;
}
body {
  font-family: "Work Sans", sans-serif;
  max-width: 100%;
}
.container {
  padding: 0 15px;
  margin:0 auto;
}
/* Small */
@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}
/* Medium */
@media (min-width: 992px) {
  .container {
    width: 970px;
  }
}
/* Large */
@media (min-width: 1200px) {
  .container {
    width: 1170px;
  }
}
/* End Global Rules */

/* Start special components */
i {
  color: var(--main-color);
 }


.special-heading {
  color: #ebeced;
  font-size: 100px;
  text-align: center;
  font-weight: 800;
  letter-spacing: -3px;
  margin: 0;
}
.special-heading + p {
  margin: -30px 0 0;
  font-size: 20px;
  text-align: center;
  color: #79797995;
}
@media (max-width: 767px) {
  .special-heading {
    font-size: 60px;
  }
  .special-heading + p {
    margin-top: -15px;
  }
}
/* End special component */
/* Header Section */
.header {
  padding: 20px;
}
.header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.logo {
  width: 60px;
  margin:0;
}

.header .links {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 30px;
  height: 21px;
}

.header .links:hover ul {
  display: block;

}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
  position: absolute;
  background-color: #f6f6f6;
  right: 0;
  top: calc(100% + 15px);
  min-width: 200px;
  display: none;

}
.header .links ul li a {
  display: block;
  padding: 15px;
  text-decoration: none;
  color: #333;
  transition: var(--main-duration);
}
.header .links ul li a:hover {
  padding-left: 25px;
}
.header .links ul li:not(:last-child) a {
  border-bottom: 1px solid #ddd;
}
.header .links ul::before {
  content: "";
  border-width: 10px;
  border-style: solid;
  border-color: transparent transparent #f6f6f6 transparent;
  position: absolute;
  right: 5px;
  top: -20px;
}
.header .container .icon{
  width: 30px;
  height: 30px;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  padding: 0;
}
.header .container .icon > *{
  height: 2px;
  background-color: #333;
  margin: 0 0 3px 0;


}
.header .links .icon span:first-child {
  flex-basis: 100%;

}
.header .links .icon span:nth-child(2) {
  flex-basis: 60%;
  transition: flex-basis var(--main-duration);
}
.header .links:hover .icon span:nth-child(2) {
  flex-basis: 100%;
}
.header .links .icon span:last-child {
  flex-basis: 100%;

}
/* End Header */
/* Start Landing */
.landing {
  background-image: url(../images/landing.jpg);
  background-size: cover;
  height: calc(100vh - 70px);
  display: grid;
  place-items: center;
}

.landing .section-text {
  display: flex;
  width: 320px;
  max-width: 100%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.landing .section-text h1 {
  font-weight: bold;
  font-size: 50px;
  color: var(--main-color);
  margin: 0;
}
.landing .section-text p {
    font-size: 19px;
    line-height: 1.8;
    margin-left: 5%;
}
/* End Landing */
/* Start Features */

.features {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
  background-color: var(--section-background);
}
.features .container {
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
  grid-gap: 20px;
}
.features .feat {
  text-align: center; 
  padding: 20px;
 }
.features .feat h3 {
  font-weight: 800;
  margin: 30px 0;
}
 .feat p {
  line-height: 1.8;
  color: #777;
  font-size: 17px;
 }

/* End Features */

/* Start Services */
.services {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
}

.services .container {
  display: flex;
  flex-direction: column; 
}

.services .service-content {
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
  grid-gap: 30px;
  margin-top: 100px;
  
}

.services .service-content .srv {
  display: flex;
  justify-content: space-between;
  gap: 15px;
  margin-bottom: 40px;
}
@media (max-width: 767px) {
  .services .services-content .srv {
    flex-direction: column;
    text-align: center;
  }
}

.services .service-content i {
  flex-basis: 60px; 
}
.services .service-content .srv .srv-text {
  margin-left: 15px;
} 
.services .service-content .srv .srv-text h3 {
  margin: 0;
}
.services .service-content .srv .srv-text p{
  margin: 20px 0;
  line-height: 1.6;
  color : rgba(68, 68, 68, 0.584);
  font-size: 16px;

}
.services .service-content .image-container {
  text-align: center;
  position: relative;
}
.services .service-content .image-container img{
  width: 260px;
  border-style: none;
}

.services .service-content .image-container::before {
  content: '';
  position: absolute;
  background-color: #2c4755;
  width: 100px;
  height: calc(100% + 100px);
  right:0;
  top: -50px;
  z-index: -1;
}
@media (max-width: 1199px) {
  .col3 {
    display: none;
  }
}
/* End Services */

/* Start Portfolio */

.portfolio {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
  background-color: #f6f6f6;  
}
.portfolio .portfolio-content {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 30px;
  margin-top: 100px;
}
.portfolio .card {
  background-color: #fff;
  padding: 1.25rem;
  transition: transform 350ms ease-in;
}
.portfolio .card:hover {
  transform: scale(1.03);
}
.portfolio .card p {
  color: var(--secondary-color);
}
.portfolio .portfolio-content img {
  max-width: 100%;
}
/* End Portfolio */
/* Start About */
.about {
  padding-top: var(--section-padding);
  padding-bottom: calc(var(--section-padding) + 60px);
}
.about .about-content {
  display: grid;
  margin-top: 100px;
  grid-template-columns: repeat(auto-fill,minmax(400px,1fr));
  gap: 80px;
  place-items: center start;
  text-align: left;
}
.about .about-img {
  width: 250px;
  position: relative;
}
.about .about-img::after {
  content: '';
  background-color: #fff;
  height: 280px;
  right: -135px;
  top: -30px;
  position: absolute;
  width: 100px;
  border-left: 80px solid var(--main-color);
  border-bottom: 80px solid var(--main-color);
  z-index: -1 ;

}
.about .about-img::before {
  content: '';
  background-color: rgba(119, 119, 119, 0.12);
  left: -20px;
  top: -40px;
  position: absolute;
  width: 80px;
  height: calc(375px + 80px);
  z-index: -1 ;

}
@media (max-width: 992px) {
  .about .about-img::before, .about .about-img::after  {
    display: None;
  }
  .about .about-content {
    text-align: center;
    }
    .about .about-img {
      margin: auto;
    }
    .about .about-content .about-text {
      display: flex;
      flex-direction: column;
      align-items: center;
    }
}
.about .about-img img {
  max-width: 100%;
}
.about .about-text {
  line-height: 2;
  width: 100%;
}
.about .about-text p {
  width: 80%;
}
.about .about-text p:first-of-type {
  font-weight: bold;
  margin-bottom: 50px;
}
.about hr {
  color: var(--main-color);
  width: 50%;
  transform: translateX(-50%);
}
.about .about-text p:last-of-type {
  color: #777;

}

/* End About */
/* Start Contact */

.contact {
  padding:var(--section-padding) 0;
  background-color: var(--section-background);

}

.contact .contact-content {

  text-align: center;
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
}

.contact .label {
  font-weight: 800;
  font-size: 35px;
  color: var(--secondary-color);
  letter-spacing: -2px;
  margin-bottom: 15px;

}
.contact .contact-mail {
  text-decoration: None;
  display: block;
  color: var(--main-color);
  font-weight: 800;
  font-size: 30px;
}

.contact .social {
  margin-top: 15px;
}
.contact i {
  color: var(--secondary-color) ;
}
/* End Contact */


/* Start footer */

.footer {
  background-color: var(--secondary-color);
  text-align: center;
  color: #fff;
  font-size: 18px;
  padding: 30px 10px;
}

.footer span {
  color: var(--main-color);
  font-weight: bold;
}
.footer span:last-of-type {
  font-size: 10px;
}
/* End footer */

